--- a/package.json
+++ b/package.json
@@ -1,34 +1,37 @@
 {
-  "name": "api-design",
-  "version": "1.0.0",
-  "main": "index.ts",
-  "scripts": {
-    "dev": "nodemon src/index.ts",
-    "test": "jest"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@biomejs/biome": "1.8.3",
-    "@types/node": "^20.14.9",
-    "jest": "^29.7.0",
-    "prisma": "^5.16.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.2"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.16.1",
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "express-validator": "^7.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "lodash": "^4.17.21",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.1.4",
-    "resend": "^3.4.0"
-  }
+	"name": "readera",
+	"version": "1.0.0",
+	"main": "index.ts",
+	"scripts": {
+		"dev": "nodemon src/index.ts",
+		"build": "tsc -p tsconfig.json",
+		"test": "jest",
+		"start": "prisma migrate deploy && prisma generate && node/dist/index.js",
+		"format": "npx @biomejs/biome check --write ./"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"description": "",
+	"devDependencies": {
+		"@biomejs/biome": "1.8.3",
+		"@types/node": "^20.14.9",
+		"jest": "^29.7.0",
+		"prisma": "^5.16.1",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.5.2"
+	},
+	"dependencies": {
+		"@prisma/client": "^5.16.1",
+		"bcrypt": "^5.1.1",
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.5",
+		"express": "^4.19.2",
+		"express-validator": "^7.1.0",
+		"jsonwebtoken": "^9.0.2",
+		"lodash.merge": "^4.6.2",
+		"morgan": "^1.10.0",
+		"nodemon": "^3.1.4",
+		"resend": "^3.4.0"
+	}
 }
