--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "nodemon src/index.ts",
 		"build": "tsc -p tsconfig.json",
 		"test": "jest",
-		"start": "prisma migrate deploy && prisma generate && node/dist/index.js",
+		"start": "prisma migrate deploy && node ./dist/index.js",
 		"format": "npx @biomejs/biome check --write ./"
 	},
 	"keywords": [],
@@ -18,11 +18,14 @@
 		"@types/node": "^20.14.9",
 		"jest": "^29.7.0",
 		"prisma": "^5.16.1",
+		"ts-jest": "^29.1.5",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.5.2"
 	},
 	"dependencies": {
 		"@prisma/client": "^5.16.1",
+		"@types/jest": "^29.5.12",
+		"@types/supertest": "^6.0.2",
 		"bcrypt": "^5.1.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
@@ -32,6 +35,7 @@
 		"lodash.merge": "^4.6.2",
 		"morgan": "^1.10.0",
 		"nodemon": "^3.1.4",
-		"resend": "^3.4.0"
+		"resend": "^3.4.0",
+		"supertest": "^7.0.0"
 	}
 }
